force-app/main/default/objects/Load_Batch__c/Load_Batch__c.object-meta.xml
<CustomObject>
    <label>Load Batch</label>
    <pluralLabel>Load Batches</pluralLabel>
    <nameField>
        <label>Batch Number</label>
        <displayFormat>LB-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks each file upload attempt for a source system, including row counts, error counts, and processing status.</description>
</CustomObject>