force-app/main/default/objects/Load_Batch__c/fields/Row_Count__c.field-meta.xml
<CustomField>
    <fullName>Row_Count__c</fullName>
    <label>Row Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>