force-app/main/default/objects/Load_Batch__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source System</label>
    <referenceTo>Source_System__c</referenceTo>
    <relationshipLabel>Load Batches</relationshipLabel>
    <relationshipName>Load_Batches</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>